[project]
name = "carton-caps"
version = "0.1.0"
description = "Carton Caps is an app that empowers consumers to raise money for the schools they care about, while buying the everyday products they love."
readme = "README.md"
authors = [
    { name = "Kyle Kestell", email = "kyle@kestell.org" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=1.1.0",
    "quart>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "src" }
]